--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -9,6 +9,12 @@
       <li class="nav-item">
       <%= link_to 'About', home_about_path, class:"nav-link" %>
       </li>
+      <li class="nav-item">
+      <%= link_to 'Friendpasses', friendspasses_path, class:"nav-link" %>
+      </li>
+      <li class="nav-item">
+      <%= link_to 'Add Friendpass', new_friendspass_path, class:"nav-link" %>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
