--- a/app/views/friendspasses/new.html.erb
+++ b/app/views/friendspasses/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to friendspasses", friendspasses_path %>
+  <%= link_to "Back to friendspasses", friendspasses_path, class:"my-1 btn btn-dark" %>
 </div>
