--- a/app/views/friendspasses/_friendspass.html.erb
+++ b/app/views/friendspasses/_friendspass.html.erb
@@ -1,27 +1,10 @@
-<div id="<%= dom_id friendspass %>">
-  <p>
-    <strong>First name:</strong>
-    <%= friendspass.first_name %>
-  </p>
-
-  <p>
-    <strong>Last name:</strong>
-    <%= friendspass.last_name %>
-  </p>
-
-  <p>
-    <strong>Email:</strong>
-    <%= friendspass.email %>
-  </p>
-
-  <p>
-    <strong>Phone:</strong>
-    <%= friendspass.phone %>
-  </p>
-
-  <p>
-    <strong>Twitter:</strong>
-    <%= friendspass.twitter %>
-  </p>
-
-</div>
+<tr id="<%= dom_id friendspass %>">
+  <td><%= friendspass.first_name %></td>
+  <td><%= friendspass.last_name %></td>
+  <td><%= friendspass.email %></td>
+  <td><%= friendspass.phone %></td>
+  <td><%= friendspass.twitter %></td>
+  <td><%= link_to "Show", friendspass %></td>
+  <td><%= link_to "Edit", edit_friendspass_path(friendspass) %></td>
+  <td><%= link_to "Delete", @friendspass, method: :delete, data: {confirm: "Are you sure? "} %></td>
+</tr>
