--- a/app/views/friendspasses/edit.html.erb
+++ b/app/views/friendspasses/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this friendspass", @friendspass %> |
-  <%= link_to "Back to friendspasses", friendspasses_path %>
+  <%= link_to "Show this friendspass", @friendspass, class:"btn btn-secondary" %>
+  <%= link_to "Back to friendspasses", friendspasses_path, class:"btn btn-dark" %>
 </div>
