--- a/app/views/friendspasses/_form.html.erb
+++ b/app/views/friendspasses/_form.html.erb
@@ -36,6 +36,10 @@
     <%= form.text_field :twitter, class:"form-control" %>
   </div>
 
+  <div class="form-group">
+    <%= form.number_field :user_id, id: :friendspass_user_id, value: current_user.id, class:"form-control", type: :hidden %>
+  </div>
+
   <div>
     <%= form.submit class:"btn btn-secondary"%>
   </div>
