Refactor: More Associations and Authorization

--- a/app/views/friendspasses/_friendspass.html.erb
+++ b/app/views/friendspasses/_friendspass.html.erb
@@ -4,6 +4,7 @@
   <td><%= friendspass.email %></td>
   <td><%= friendspass.phone %></td>
   <td><%= friendspass.twitter %></td>
+  <td><%= friendspass.user_id %></td>
   <td><%= link_to "Show", friendspass %></td>
   <td><%= link_to "Edit", edit_friendspass_path(friendspass) %></td>
   <td><%= link_to "Delete", @friendspass, method: :delete, data: {confirm: "Are you sure? "} %></td>
