--- a/app/views/friendspasses/index.html.erb
+++ b/app/views/friendspasses/index.html.erb
@@ -9,6 +9,7 @@
         <th scope="col">Email</th>
         <th scope="col">Phone Number</th>
         <th scope="col">Twitter</th>
+        <th scope="col">User ID</th>
         <th scope="col"></th>
         <th scope="col"></th>
         <th scope="col"></th>
@@ -16,7 +17,9 @@
     </thead>
     <tbody>
   <% @friendspasses.each do |friendspass| %>
-    <%= render friendspass %>
+    <% if friendspass.user == current_user %>
+      <%= render friendspass %>
+    <% end %>
   <% end %>
     </tbody>
   </table>
