--- a/app/views/friendspasses/edit.html.erb
+++ b/app/views/friendspasses/edit.html.erb
@@ -6,5 +6,6 @@
 
 <div>
   <%= link_to "Show this friendspass", @friendspass, class:"btn btn-secondary" %>
-  <%= link_to "Back to friendspasses", friendspasses_path, class:"btn btn-dark" %>
+  <%= link_to "Delete", @friendspass, method: :delete, data: {confirm: "Are you sure? "}, class:"btn btn-danger" %>
+  <%= button_to "Back to friendspasses", friendspasses_path, class:"btn btn-dark" %>
 </div>
