--- a/app/views/friendspasses/index.html.erb
+++ b/app/views/friendspasses/index.html.erb
@@ -1,28 +1,30 @@
 <h1>Friendspasses</h1>
 
-<div id="friendspasses" class="mt-5">
-  <table class="table table-striped table-bordered table-hover">
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">First Name</th>
-        <th scope="col">Last Name</th>
-        <th scope="col">Email</th>
-        <th scope="col">Phone Number</th>
-        <th scope="col">Twitter</th>
-        <th scope="col">User ID</th>
-        <th scope="col"></th>
-        <th scope="col"></th>
-        <th scope="col"></th>
-      </tr>
-    </thead>
-    <tbody>
-  <% @friendspasses.each do |friendspass| %>
-    <% if friendspass.user == current_user %>
-      <%= render friendspass %>
-    <% end %>
-  <% end %>
-    </tbody>
-  </table>
-</div>
+<% if user_signed_in? %>
 
-<%= link_to "New friendspass", new_friendspass_path, class:"btn btn-secondary" %>
+  <div id="friendspasses" class="mt-5">
+    <table class="table table-striped table-bordered table-hover">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Email</th>
+          <th scope="col">Phone Number</th>
+          <th scope="col">Twitter</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+    <% @friendspasses.each do |friendspass| %>
+      <% if friendspass.user == current_user %>
+        <%= render friendspass %>
+      <% end %>
+    <% end %>
+      </tbody>
+    </table>
+  </div>
+
+  <%= link_to "New friendspass", new_friendspass_path, class:"btn btn-secondary" %>
+<% else %>
+      <h3> Hello World</h3>
+      <p>Welcome to Paradise</p>
+<% end %>
